--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,14 +1,24 @@
 body{
     background-image:url('../images/wordplay_bg1.jpg');
+    font-size: 100%;
+    font-family: 'Courier New', monospace;
+    font-variant: small-caps;
+    color: black;
 }
 
 h1 {
     text-align: center;
-    font-size:  4em;
-    color: #2e2e2e;
+    font:  small-caps 100 5em "MV Boli", cursive;
+    color: #3a3a3a;
     text-shadow: 0.1em 0.1em .1em grey;
+    margin: .5em 0em .25em;
+    /* font-family: "MV Boli", cursive ; */
+    /* font-weight: 100; */
+    /* font-variant: small-caps; */
+    /* font-size:  5em; */
 
 }
+
 
 ul{
     list-style-type: none;
@@ -18,19 +28,22 @@ ul li{
 display: inline;
 }
 
+label, dt {
+    font-size: 2em;
+    font-weight: normal;
+}
+
 label {
-    font-size: 1.5em;
+    padding: 2.5%
 }
 
 dd{
-border-style: groove;
+border: groove thick white;
 margin-left: 0;
 text-align: center;
 font-size: 3em;
-}
-
-dt{
-font-size: 1.5em;
+font-family: "MV Boli", cursive;
+color: #3a3a3a;
 }
 
 .section {
@@ -49,27 +62,36 @@ font-size: 1.5em;
     padding: 2.5%;
 }
 
-#words > li{
+#words >  li{
 clear: both;
-padding: 0 16;
+/* padding: 2.5%; */
 }
 
-#words .word{
-border: groove;
-padding: 5px;
+#words .word {
+border: groove thick white;
+padding: 2.5%;
 font-size: 4em;
 }
 
-.word {
+.word, .guess {
     clear: both;
     letter-spacing: .7em;
     text-align: center;
+    padding: 0 16;
+    margin: 0 16
 }
 
 .word li{
     border:solid 3px;
     margin: 2px;
+
 }
+
+/* table{ */
+/*     border:solid 3px; */
+/*     margin: 2px; */
+/* } */
+
 
 .fword li{
     border:solid 1px;
