--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -12,13 +12,12 @@ h1 {
     color: #3a3a3a;
     text-shadow: 0.1em 0.1em .1em grey;
     margin: .5em 0em .25em;
-    /* font-family: "MV Boli", cursive ; */
-    /* font-weight: 100; */
-    /* font-variant: small-caps; */
-    /* font-size:  5em; */
-
 }
 
+label, dt {
+    font-size: 2em;
+    font-weight: normal;
+}
 
 ul{
     list-style-type: none;
@@ -28,13 +27,8 @@ ul li{
 display: inline;
 }
 
-label, dt {
-    font-size: 2em;
-    font-weight: normal;
-}
-
 label {
-    padding: 2.5%
+    padding: 2.5%;
 }
 
 dd{
@@ -64,7 +58,7 @@ color: #3a3a3a;
 
 #words >  li{
 clear: both;
-/* padding: 2.5%; */
+padding: 2.5%;
 }
 
 #words .word {
@@ -73,17 +67,20 @@ padding: 2.5%;
 font-size: 4em;
 }
 
-.word, .guess {
-    clear: both;
-    letter-spacing: .7em;
-    text-align: center;
-    padding: 0 16;
-    margin: 0 16
-}
+/* .word {  */
+/*     padding: 0 16; */
+/*     margin: 0 16 */
+/* } */
 
 .word li{
     border:solid 3px;
     margin: 2px;
+    /* padding: 0px, 10px, 0px; */
+    width: 200px;
+    /* height: 20%; */
+    color: red;
+    /* letter-spacing: .7em; */
+    /* text-align: center; */
 
 }
 
