--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -86,7 +86,12 @@ height: 65px;
 /*     border:solid 3px; */
 /*     margin: 2px; */
 /* } */
-
+#found {
+width: 750px;
+-moz-column-width: 250px;
+-moz-column-count:3;
+-moz-column-gap: 0;
+}
 
 #found > li{
     clear: left;
@@ -113,5 +118,6 @@ height: 65px;
 /*     border: solid; */
 /*     float: right; */
 /* } */
+
 
 
