--- a/views/index.erb
+++ b/views/index.erb
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title>Wordplay</title>
-    <link rel="stylesheet" href="public/styles/main.css" type="text/css" media="screen" />
-    <script type="text/javascript" src="public/scripts/jquery.js"></script>
-    <script type="text/javascript" src="public/scripts/json2.js"></script>
-    <script type="text/javascript" src="public/scripts/wordplay.js"></script>
+    <link rel="stylesheet" href="styles/main.css" type="text/css" media="screen" />
+    <script type="text/javascript" src="scripts/jquery.js"></script>
+    <script type="text/javascript" src="scripts/json2.js"></script>
+    <script type="text/javascript" src="scripts/wordplay.js"></script>
   </head>
   <body>
     <div id="main">
@@ -53,7 +53,7 @@
           </li>
         </ul>
 
-        <img src="public/images/kitten.jpeg" class="kitty" alt="two hot chicks having sex" />
+        <img src="/images/kitten.jpeg" class="kitty" alt="two hot chicks having sex" />
       </div>
       <div id="report" class="section">
         <ul id="found">
