--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -42,7 +42,6 @@ color: #3a3a3a;
 
 .section {
     width: 45%;
-    float: left;
 }
 
 .display {
@@ -87,14 +86,19 @@ height: 65px;
 /*     margin: 2px; */
 /* } */
 #found {
-width: 750px;
--moz-column-width: 250px;
--moz-column-count:3;
--moz-column-gap: 0;
+	outline: 1px dashed green;
+	width: 1250px;
+
 }
 
 #found > li{
     clear: left;
+}
+
+#found ul{
+    outline: 1px dashed red;
+  	width: 12%;
+  	float: left;
 }
 
 #found li ul  li{
@@ -104,7 +108,7 @@ width: 750px;
     height: 1em;
     width: 1em;
     font-size: 2em;
-  	text-align: center;
+    text-align: center;
 }
 
 .kitty{
@@ -118,6 +122,8 @@ width: 750px;
 /*     border: solid; */
 /*     float: right; */
 /* } */
+
+
 
 
 
