--- a/views/index.erb
+++ b/views/index.erb
@@ -16,7 +16,7 @@
 	  <% 8.times.each do |j| %>
           <ul>
 	  <% 10.times.each do |i| %>
-	  <li> word_<%= (j*10)+i %> </li>
+	  <li><ul id= word_<%= (j*10)+i %>></ul> </li>
 	  <% end %>
 	</ul>
 	  <% end %>
