--- a/views/index.erb
+++ b/views/index.erb
@@ -40,7 +40,7 @@
         <li>
           <dl id="time">
 	    <dt>Time</dt>
-            <dd>5:00</dd>
+            <dd id= "timer"></dd>
           </dl>
         </li> 
         <li>
