--- a/views/index.erb
+++ b/views/index.erb
@@ -4,8 +4,9 @@
     <title>Wordplay</title>
     <link rel="stylesheet" href="styles/reset.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="styles/main.css" type="text/css" media="screen" />
-    <script type="text/javascript" src="scripts/jquery.js"></script>
+    <script type="text/javascript" src="scripts/jquery2.js"></script>
     <script type="text/javascript" src="scripts/json2.js"></script>
+    <script type="text/javascript" src="scripts/playSound.js"></script>
     <script type="text/javascript" src="scripts/wordplay.js"></script>
   </head>
   <body>
@@ -29,6 +30,8 @@
 	  <label for="letters"> Available Letters</label>
 	  <ul id="letter" class="word">
    	  </ul>
+	  <p id="error">
+	  </p>
 	</li>
 	<li>
 	  <label for="guess"> Guessed Letters</label>
