--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -25,6 +25,8 @@ ul{
 
 .display dd{
 border: groove thick white;
+box-shadow: 5px 5px 3px silver;
+border-radius: 5px;
 text-align: center;
 font-size: 2em;
 font-family: "MV Boli", cursive;
@@ -36,6 +38,10 @@ height: 30px;
 .display li {
 	float: left;
   padding: 25px;
+}
+
+#error {
+  position: absolute;
 }
 
 #words {
@@ -54,18 +60,22 @@ float: left;
 
 #words .word {
 border: groove thick white;
+box-shadow: 5px 5px 3px silver;
+border-radius: 5px;
 font-size: 2em;
 height: 40px;
 width: 245px;
 }
 
 .word li{
-    border:solid 3px;
+    border:solid 2px;
     margin: 2px;
     text-align: center;
     float: left;
     width: 30px;
     height: 30px;
+  	box-shadow: 3px 3px 2px;
+	  border-radius: 4px;
 }
 
 #found {
@@ -115,6 +125,13 @@ width: 245px;
 .invisible {
     display: none;
 }
+
+
+
+
+
+
+
 
 
 
