words fill at end, colors, kitten position/text

--- a/views/index.erb
+++ b/views/index.erb
@@ -67,9 +67,13 @@
           </dl>
         </li>
       </ul>
-      <dl id = "kitten" class = "invisible">
+      <dl id="winkitten" class="invisible">
 	<dt>      <img src="/images/kitten.jpeg" class="kitty" alt="two hot chicks having sex" /></dt>
-	<dd>Meow</dd>
+	<dd>You Won!</dd>
+      </dl>
+      <dl id="losekitten" class="invisible">
+	<dt>      <img src="/images/angrycat.jpeg" class="kitty" alt="two hot chicks having sex" /></dt>
+	<dd>You Lost!</dd>
       </dl>
     </div>
   </body>
