--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -87,7 +87,7 @@ width: 245px;
 
 #found > ul{
     clear left;
-    width: 12%;
+  	padding: 1%;
     float: left;
 }
 
@@ -144,6 +144,7 @@ width: 245px;
     text-decoration: blink;
     color: red;
 }
+
 
 
 
