shuffle letters with button

--- a/views/index.erb
+++ b/views/index.erb
@@ -30,6 +30,7 @@
 	  <label for="letters"> Available Letters</label>
 	  <ul id="letter" class="word">
    	  </ul>
+	  <button type="button" onclick="buttonshuffle()">Shuffle Letters</button>
 	  <p id="error">
 	  </p>
 	</li>
