--- a/views/index.erb
+++ b/views/index.erb
@@ -38,6 +38,7 @@
 	  <label for="guess"> Guessed Letters</label>
           <ul id="guess" class="word">
           </ul>
+	  <button type="button" onclick="endgame()">Game Over</button>
 	</li>
       </ul>
       <ul id="result" class="display">
@@ -76,6 +77,23 @@
 	<dt>      <img src="/images/angrycat.jpeg" class="kitty" alt="two hot chicks having sex" /></dt>
 	<dd>You Lost!</dd>
       </dl>
+    </div>
+    <div id="highscore" class="invisible">
+      <table>
+	<caption>High Score</caption>
+	<tr>
+	  <th>Name</th>
+	  <th>Score</th>
+	</tr>
+	<tr>
+	  <td>Elaina</td>
+	  <td>100000</td>
+	  </tr>
+	<tr>
+	<td>Peter</td>
+	<td>1</td>
+	</tr>
+      </table>
     </div>
   </body>
 </html>
