--- a/views/index.erb
+++ b/views/index.erb
@@ -38,6 +38,7 @@
 	  <label for="guess"> Guessed Letters</label>
           <ul id="guess" class="word">
           </ul>
+	  <button type="button" onclick="startgame()">Click to Start!</button>
 	  <button type="button" onclick="endgame()">Game Over</button>
 	</li>
       </ul>
