start button bugfix and win condition bugfix

--- a/views/index.erb
+++ b/views/index.erb
@@ -38,8 +38,8 @@
 	  <label for="guess"> Guessed Letters</label>
           <ul id="guess" class="word">
           </ul>
-	  <button type="button" onclick="startgame()">Click to Start!</button>
-	  <button type="button" onclick="endgame()">Game Over</button>
+	  <button id="start" type="button" onclick="startgame()">Click to Start!</button>
+	  <button id="end" type="button" onclick="endgame()">Game Over</button>
 	</li>
       </ul>
       <ul id="result" class="display">
