New Round Button

--- a/views/index.erb
+++ b/views/index.erb
@@ -31,6 +31,7 @@
 	  <ul id="letter" class="word">
    	  </ul>
 	  <button type="button" onclick="buttonshuffle()">Shuffle Letters</button>
+	  <button type="button" id="newround" class="invisible" onclick="nextword()">Next Round</button>
 	  <p id="error">
 	  </p>
 	</li>
@@ -72,11 +73,11 @@
       </ul>
       <dl id="winkitten" class="invisible">
 	<dt>      <img src="/images/kitten.jpeg" class="kitty" alt="two hot chicks having sex" /></dt>
-	<dd>You Won!</dd>
+	<dd>Next Round Available!</dd>
       </dl>
       <dl id="losekitten" class="invisible">
 	<dt>      <img src="/images/angrycat.jpeg" class="kitty" alt="two hot chicks having sex" /></dt>
-	<dd>You Lost!</dd>
+	<dd>Game Over!</dd>
       </dl>
     </div>
     <div id="highscore" class="invisible">
