Shortcut buttons, key, changed 'new round' conditions

--- a/views/index.erb
+++ b/views/index.erb
@@ -71,6 +71,7 @@
           </dl>
         </li>
       </ul>
+      <p id="key">Shift to Start Game -- Shift to Move to Next Level -- Space to Shuffle Letters -- Esc to End Game</p>
       <dl id="winkitten" class="invisible">
 	<dt>      <img src="/images/kitten.jpeg" class="kitty" alt="two hot chicks having sex" /></dt>
 	<dd>Next Round Available!</dd>
