--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -148,14 +148,23 @@ width: 245px;
 #highscore{
   	position: fixed;
   	background-color: white;
-  	width: 500px;
-  	height: 500px;
+  	width: 300px;
+  	height: 325px;
   	left: 30%;
   	top: 25%;
 		font-size: 1.5em;
-    text-align: center;
+		padding: 10px;
 }
 
+.score{
+	text-align: right;
+  padding-right: 35px;	
+}
+
+.name{
+	text-align: left;
+  padding-left: 35px;
+}
 
 table {
   padding: 1px;
@@ -181,6 +190,7 @@ table {
   box-shadow: 5px 5px 2px grey; 
   
 }
+
 
 
 
