--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -146,26 +146,51 @@ width: 245px;
 }
 
 #highscore{
+	  font-family: "MV Boli", cursive;
+  	font-variant: small-caps;
+  	font-size: xx-small;
   	position: fixed;
-  	background-color: white;
-  	width: 300px;
-  	height: 325px;
+    background-image:url('../images/images.jpg');
+  	background-repeat: no-repeat;
+  	background-position:center;
+  	background-size: contain;
+    width: 300px;
+  	height: 400px;
   	left: 30%;
   	top: 25%;
 		font-size: 1.5em;
-		padding: 10px;
+		padding: 25px 10px 10px;;
   	border: 3px solid black;
   	box-shadow: 5px 5px 2px grey;
+}
+
+#highscore th, #highscore caption, #highscore td, #highscore p{
 }
 
 .score{
 	text-align: right;
   padding-right: 35px;	
+  height: 10px;
+  width: 10px;
 }
 
 .name{
 	text-align: left;
   padding-left: 35px;
+  }
+
+#highscore th{
+  font-size: 1.25em;
+;
+	border-collapse: collapse;
+	font-family: 'Courier New', monospace;
+	font-weight: bold;
+}
+
+
+#highscore caption{
+  font:  small-caps 1.5em "MV Boli", cursive;
+	padding-top: 10px;  
 }
 
 table {
@@ -174,6 +199,14 @@ table {
 	text-align: center;  
 }
 
+#note{
+  text-align: center;
+  font-weight: bold;
+  font-family: 'Courier New', monospace;
+	padding-top: 15px;
+  margin-left: 3px;
+	width: 294px;
+}
 #key {
   clear: both;
   text-indent: 25px;
@@ -181,17 +214,22 @@ table {
 
 #newhighscore {
  	position: fixed;
-  background: white;
+  background: #ffffff;
+  font-weight: bold;
   height: 40px;
   width: 450px;
   left: 300px;
-  top: 300px;
+  top: 350px;
   padding-top: 15px;
   padding-left: 10px;
   border: solid;
   box-shadow: 5px 5px 2px grey; 
   
-}
+
+
+
+
+
 
 
 
