--- a/views/index.erb
+++ b/views/index.erb
@@ -32,13 +32,13 @@
    	  </ul>
 	  <button type="button" onclick="buttonshuffle()">Shuffle Letters</button>
 	  <button type="button" id="newround" class="invisible" onclick="nextword()">Next Round</button>
+	  <button type="button" id="submit" onclick="buttonsubmit()">Submit Word</button>
 	  <p id="error">
 	  </p>
-	</li>
 	<li>
 	  <label for="guess"> Guessed Letters</label>
           <ul id="guess" class="word">
-          </ul>
+	  </ul>
 	  <button id="start" type="button" onclick="startgame()">Click to Start!</button>
 	  <button id="end" type="button" onclick="endgame()">Game Over</button>
 	</li>
