--- a/views/index.erb
+++ b/views/index.erb
@@ -30,9 +30,9 @@
 	  <label for="letters"> Available Letters</label>
 	  <ul id="letter" class="word">
    	  </ul>
-	  <button type="button" onclick="buttonshuffle()">Shuffle Letters</button>
-	  <button type="button" id="newround" class="invisible" onclick="nextword()">Next Round</button>
-	  <button type="button" id="submit" onclick="buttonsubmit()">Submit Word</button>
+	  <img src="/images/shuffle-off.png" id="shuffle" alt="Shuffle Letters"/>
+	  <img src="/images/submit-off.png" id="submit" alt="Submit Word"/>
+	  <img src="/images/newround-off.png" id="newround" class="invisible" alt="Next Round" />
 	  <p id="error">
 	  </p>
 	<li>
