--- a/experiment/experiment.css
+++ b/experiment/experiment.css
@@ -2,9 +2,9 @@ body {
     font-size: 20px;
 }
 
-div, h1, li, dd, dt, dl, button {
-    outline: 1px dashed black;
-}
+/* div, h1, li, dd, dt, dl, button { */
+/*     outline: 1px dashed black; */
+/* } */
 
 dt{
     font-size: 1em;
@@ -29,17 +29,12 @@ dd{
 }
 
 #time, #progress {
-    width: 25%;
-    height: 100%;
-    float: left;
-}
-
-#time {
     width: 20%;
     height: 90%;
     margin-top: 10px;
     margin-left: 2.5%;
     margin-right: 2.5%;
+    float: left;
 }
 
 #time dt {
@@ -57,8 +52,27 @@ h1 {
     float: left;
     text-align: center;
     font-size: 3em;
-    outline: 1px solid green;
     padding-top: .25em;
+}
+
+#progress > dd, 
+#progress > span {
+    float:left;
+    text-align: center;
+    height: 50%;
+}
+
+#progress dt{
+    height: 25%;
+}
+
+#progress > span {
+    font-size: 2.5em;
+    padding-top: .1em;
+}
+
+#found_word_count {
+    margin-left:25%;
 }
 
 
