--- a/experiment/experiment.css
+++ b/experiment/experiment.css
@@ -2,9 +2,9 @@ body {
     font-size: 20px;
 }
 
-div, h1, li, dd, dt, dl, button {
-    outline: 1px dashed black;
-}
+/* div, h1, li, dd, dt, dl, button { */
+/*     outline: 1px dashed black; */
+/* } */
 
 dt{
     font-size: 1em;
@@ -80,6 +80,7 @@ h1 {
     height: 50%;
     width: 100%;
     font-size: 1.2em;
+    margin-bottom: 1em;
 }
 
 #found > li{
@@ -97,9 +98,25 @@ h1 {
     height: 40%;
 }
 
-#play > div {
+#play > dl {
     height: 33.3%;
 }
+
+#remaining > button {
+    margin-left: 1.5em;
+    margin-top: .5em;
+    width: 80%;
+    height: 1.5em;
+    font-size: 1.1em;
+ }
+
+#remaining > p {
+    font-size: 1.5em;
+    padding-top: .5em;
+    padding-left: 1em;
+    display: none;
+}
+
 
 #control {
     float: right;
