--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,5 +1,5 @@
 body{
-    background-image:url('../images/wordplay_bg1.jpg');
+    background-image:url('../images/wordplay_bg.jpg');
     font-size: 100%;
     font-family: 'Courier New', monospace;
     font-variant: small-caps;
