--- a/experiment/experiment.css
+++ b/experiment/experiment.css
@@ -36,16 +36,21 @@ dd{
 
 #status {
     height: 20%;
-    width: 100%;
+    width: 98.5%;
 }
 
 #time, #progress {
-    width: 20%;
-    height: 90%;
-    margin-top: 10px;
-    margin-left: 2.5%;
-    margin-right: 2.5%;
+    background: rgba(255, 255, 255, .4);
+    width: 15%;
+    height: 80%;
+    padding-top: 10px;
+    padding-left: 2.5%;
+    padding-right: 2.5%;
     float: left;
+    border-radius: .5em;
+}
+
+#progress {
 }
 
 #time dt {
@@ -58,7 +63,7 @@ dd{
 }
 
 h1 {
-    width: 50%;
+    width: 60%;
     height: 85%;
     float: left;
     text-align: center;
@@ -92,8 +97,9 @@ h1 {
     width: 95%;
     font-size: 1.2em;
     margin-bottom: 1em;
-    background: rgba(255, 255, 255, .3);
+    background: rgba(255, 255, 255, .4);
     padding: .2em 1em;
+    border-radius: .5em;
 }
 
 #found > li{
@@ -119,13 +125,16 @@ h1 {
 
 
 #play {
+    background: rgba(255, 255, 255, .4);
     float: left;
-    width: 50%;
-    height: 40%;
+    width: 48%;
+    height: 45%;
+    border-radius: .5em;
 }
 
 #play > dl {
     height: 33.3%;
+    margin-bottom: 1em;
 }
 
 #play .letters{
@@ -134,14 +143,21 @@ h1 {
 
 #play .letters li{
     margin: 0px 5px;
-    font-size: 1.25em;
-    background-image: url('../public/images/stone.jpg');
+    font-size: 1.5em;
+    background-image: url('../public/images/bone1.jpg');
     box-shadow: .1em .1em .1em black;
     border-radius: 6px;
     border: 2px solid black;
-    color: grey;
-    text-shadow: 1px 3px 0px white;
-    text-outline: black;
+    color: #4A4A4A;
+    text-shadow: 1px 1px 1px white;
+    font-family:  "Book Antiqua", Palatino, serif;
+}
+
+#available {
+    width: 60%;
+}
+
+.shuffle {
 }
 
 #remaining > button {
@@ -162,9 +178,12 @@ h1 {
 
 
 #control {
+    background: rgba(255, 255, 255, .4);
     float: right;
-    width: 50%;
-    height: 35%;
+    width: 48%;
+    height: 45%;
+    border-radius: .5em;
+    margin-right: .8em;
 }
 
 #control > button {
