--- a/experiment/experiment.css
+++ b/experiment/experiment.css
@@ -1,6 +1,6 @@
 body {
     font-size: 20px;
-    background-image:url('../public/images/wordplay_bg.jpg')
+    background-image:url('../public/images/wordplay_bg.jpg');
 }
 
 dt{
@@ -211,6 +211,12 @@ h1 {
     height: 2em;
 }
 
+#messanger {
+height: 10em;
+margin: 3em 2.5em 0em;
+}
+
+
 #start {
     
 }
@@ -218,6 +224,8 @@ h1 {
 #pause {
     display: none;
 }
+
+
 
 #score {
     padding-top: 1em;
