--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,288 +1,277 @@
-body{
+body {
+    font-size: 20px;
     background-image:url('../images/wordplay_bg.jpg');
-    font-size: 100%;
-    font-family: 'Courier New', monospace;
-    font-variant: small-caps;
-    color: black;
+}
+
+dt{
+    font-size: 1em;
+    border-bottom: 2px solid black;
+    width: 80%;
+}
+
+dd{
+    text-align: center;
+    font-size: 2.5em;
+    padding-top: .1em;
+}
+
+button {
+    background-color: #555;
+    color: white;
+    border-color: black;
+    border-radius: 10px;
+    box-shadow: 3px 3px 2px grey;
+}
+
+
+
+.letters {
+    clear: left;
+    font-size: .6em;
+    text-align: center;
+}
+
+.letters > li{
+    float:left;
+    width: 1em;
+    height: 1em;
+    margin: 2px 1px;
+}
+
+#everything {
+    min-width: 1200px;
+    width: 80%;
+    margin: auto;
+    height: 580px;
+    margin-top: 1em;
+}
+
+#status {
+    height: 20%;
+    width: 98.5%;
+}
+
+#time, #progress {
+    background: rgba(255, 255, 255, .4);
+    width: 15%;
+    height: 80%;
+    padding-top: 10px;
+    padding-left: 2.5%;
+    padding-right: 2.5%;
+    float: left;
+    border-radius: .5em;
+}
+
+#progress {
+}
+
+#time dt {
+    height: 25%;
+}
+
+#time dd {
+    height: 50%;
+    text-align: center;
 }
 
 h1 {
-    text-align: center;
-    font:  small-caps 100 5em "MV Boli", cursive;
-    color: #3a3a3a;
-    text-shadow: 0.1em 0.1em .1em grey;
-    margin: .5em 0em .25em;
-}
-
-label, dt {
-    font-size: 1em;
-    font-weight: normal;
-}
-
-ul{
-    list-style-type: none;
-}
-
-.display dd{
-border: groove thick white;
-box-shadow: 5px 5px 3px silver;
-border-radius: 5px;
-text-align: center;
-font-size: 2em;
-font-family: "MV Boli", cursive;
-/*color: #3a3a3a;*/
-width: 200px;
-height: 30px;
-}
-
-.display li {
-	float: left;
-  padding: 25px;
-  color: #3a3a3a;
-}
-
-#error {
-  position: absolute;
-}
-
-#words {
-  clear: left;
-}
-
-#result {
-  clear: left;
-}
-
-#words >  li{
-  padding: 25px;
-width: 25%;
-float: left;
-}
-
-#words .word {
-border: groove thick white;
-box-shadow: 5px 5px 3px silver;
-border-radius: 5px;
-font-size: 2em;
-height: 40px;
-width: 245px;
-}
-
-.word li{
-    border:solid 2px;
-    margin: 2px;
-    text-align: center;
+    width: 60%;
+    height: 85%;
     float: left;
-    width: 30px;
-    height: 30px;
-  	box-shadow: 3px 3px 2px;
-	  border-radius: 4px;
+    text-align: center;
+    font-size: 3em;
+    padding-top: .25em;
 }
 
-#found {
-  width: 1250px;
-  margin: 35px;
-	color:red;
+#progress > dd, 
+#progress > span {
+    float:left;
+    text-align: center;
+    height: 50%;
 }
 
-#found > ul{
-    clear left;
-  	padding: 1%;
+#progress dt{
+    height: 25%;
+}
+
+#progress > span {
+    font-size: 2.5em;
+    padding-top: .1em;
+}
+
+#found_word_count {
+    margin-left:25%;
+}
+
+
+#found{
+    height: 43%;
+    width: 95%;
+    font-size: 1.2em;
+    margin-bottom: 1em;
+    background: rgba(255, 255, 255, .4);
+    padding: .2em 1em;
+    border-radius: .5em;
+}
+
+#found > li{
+    width: 9.2%;
+    height: 100%;
     float: left;
+    margin-right: .25em;
+    
 }
 
-#found ul li ul li{
+
+#found > li:first-child{
+    margin-left: 1em;
+}
+
+#found .letters li{
+    margin-bottom: .15em;
+    opacity: 1;
     background-color: white;
-    border:solid 1px black;
-    height: 1em;
-    width: 1em;
-    font-size: 1em;
-    text-align: center;
-    margin: 1px 0px 1px;
+    box-shadow: 1px 1px 1px;
+    margin: 3px 1px;
+}    
+
+
+#play {
+    background: rgba(255, 255, 255, .4);
     float: left;
-		}
-
-#found ul li ul {
-  clear: left;
+    width: 48%;
+    height: 45%;
+    border-radius: .5em;
 }
 
-.kitty{
-   clear: both;
-   width: 150px;
-   height: 150px;
-   position: absolute;
-   left: 200px;
-   top: 10px;
+#play > dl {
+    height: 33.3%;
+    width: 80%;
+    margin-bottom: 1em;
+    margin-left: 2.25em;
 }
 
-#losekitten dd, #winkitten dd{
-    position: absolute;
-		top: 165;
-  	left: 200;
-  	font-size: 2em;
-		font-weight: bold;
+#play ul {
+    width: 100%
 }
 
-#winkitten dd{
-    color: green;
-}  
-
-#losekitten dd{
-    color: red;
+#play .letters{
+    margin-left: 1em;
 }
 
+#play .letters li{
+    margin: 0px 5px;
+    font-size: 1.5em;
+    background-image: url('../images/bone1.jpg');
+    box-shadow: .1em .1em .1em black;
+    border-radius: 6px;
+    border: 2px solid black;
+    color: #4A4A4A;
+    text-shadow: 1px 1px 1px white;
+    font-family:  "Book Antiqua", Palatino, serif;
+}
 
-.invisible {
+#available {
+    width: 60%;
+}
+
+.shuffle {
+}
+
+#remaining > button {
+    margin-left: 1.5em;
+    margin-top: .5em;
+    width: 80%;
+    height: 1.5em;
+    font-size: 1.1em;
+
+ }
+
+#remaining > p {
+    font-size: 1.5em;
+    padding-top: .5em;
+    padding-left: 2em;
     display: none;
 }
 
-.foundword{
- 	color: black; 
+
+#control {
+    background: rgba(255, 255, 255, .4);
+    float: right;
+    width: 30%;
+    height: 45%;
+    border-radius: .5em;
+    margin-right: .8em;
 }
 
-.timeout{
-    text-decoration: blink;
-    color: red;
+#control > button {
+    width: 80%;
+    margin: 0% 10%;
+    font-size: 1.1em;
+    height: 2em;
+}
+#messaging {
+    float: left;
+    width: 20%;
+    height: 13em;
+    position: relative;
 }
 
-#highscore{
-	  font-family: "MV Boli", cursive;
-  	font-variant: small-caps;
-  	font-size: xx-small;
-  	position: fixed;
-    background-image:url('../images/images.jpg');
-  	background-repeat: no-repeat;
-  	background-position:center;
-  	background-size: contain;
-    width: 300px;
-  	height: 400px;
-  	left: 30%;
-  	top: 25%;
-		font-size: 1.5em;
-		padding: 25px 10px 10px;;
-  	border: 3px solid black;
-  	box-shadow: 5px 5px 2px grey;
+#message{
+    position:relative;
+    padding:15px;
+    margin: 0px 0px 10px 10px;
+    color:#FFF;
+    background:#4a4a4a; /* default background for browsers without gradient support */
+	/* css3 */
+    background:-webkit-gradient(linear, 0 0, 0 100%, from(#4a4a4a), to(#A1A1A1));
+    background:-moz-linear-gradient(#4a4a4a, #A1A1A1);
+    background:-o-linear-gradient(#4a4a4a, #A1A1A1);
+    background:linear-gradient(#4a4a4a, #A1A1A1);
+    -webkit-border-radius:10px;
+    -moz-border-radius:10px;
+    border-radius:10px;
+/*    height: 2.5em; */
 }
 
-#highscore th, #highscore caption, #highscore td, #highscore p{
+#message:after{
+    content:"";
+    position:absolute;
+    bottom:-20px;
+    left:50px; /* controls horizontal position */
+    border-width:20px  0px 0px 20px; /* vary these values to change the angle of the vertex */
+    border-style:solid;
+    border-color:#A1A1A1 transparent;
+    /* reduce the damage in FF3.0 */
+    display:block; 
+    width:0;
 }
 
-.score{
-	text-align: right;
-  padding-right: 35px;	
-  height: 10px;
-  width: 10px;
-}
-
-.name{
-	text-align: left;
-  padding-left: 35px;
-  }
-
-#highscore th{
-  font-size: 1.25em;
-;
-	border-collapse: collapse;
-	font-family: 'Courier New', monospace;
-	font-weight: bold;
+#messanger {
+    height: 10em;
+    position: absolute;
+    bottom: 0;
+    left: 20%;
 }
 
 
-#highscore caption{
-  font:  small-caps 1.5em "MV Boli", cursive;
-	padding-top: 10px;  
+#start {
+    
 }
 
-table {
-  padding: 1px;
-	width: 100%;
-	text-align: center;  
+#pause {
+    display: none;
 }
 
-#note{
-  text-align: center;
-  font-weight: bold;
-  font-family: 'Courier New', monospace;
-	padding-top: 15px;
-  margin-left: 3px;
-	width: 294px;
-}
-#key {
-  clear: both;
-  text-indent: 25px;
+
+
+#score {
+    padding-top: 1em;
+    width: 80%;
+    height: 50%;
+    margin: auto;
 }
 
-#newhighscore {
- 	position: fixed;
-  background: #ffffff;
-  font-weight: bold;
-  height: 40px;
-  width: 450px;
-  left: 300px;
-  top: 350px;
-  padding-top: 15px;
-  padding-left: 10px;
-  border: solid;
-  box-shadow: 5px 5px 2px grey; 
+#score dd {
+    height: 80%;
 }
-  
-button {
-    margin: 2px;
-    text-align: center;
-    height: 30px;
-  	box-shadow: 3px 3px 2px;
-  	border-radius: 4px;
-		font-size: 1em;
- 
-}
-
-#shuffle{
- background-image:url("../images/shuffle-off.png");
- background-repeat: no-repeat;
- width: 45px;
- height: 45px;
-}
-
-#shuffle:hover{
- background-image:url("../images/shuffle-on.png");
- background-repeat: no-repeat;
- width: 45px;
- height: 45px;	
- }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
